Fixing desktop system layer alignment. (#16022)

--- a/extensions/amp-story/1.0/amp-story-system-layer.css
+++ b/extensions/amp-story/1.0/amp-story-system-layer.css
@@ -160,20 +160,20 @@
 
 [desktop].i-amphtml-story-system-layer {
   background: linear-gradient(to bottom, rgba(33,33,33,0) 0%, rgba(33,33,33,0.32) 100%)!important;
-  top: auto!important;
-  bottom: 0!important;
-  height: 96px!important;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  flex-direction: row-reverse;
+  top: auto !important;
+  bottom: 0 !important;
+  height: 96px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  flex-direction: row-reverse !important;
 }
 
 [desktop] .i-amphtml-story-progress-bar {
   position: relative !important;
   height: 3px !important;
-  width: calc(100vw/3) !important;
-  margin: 0px !important;
+  width: calc(100vw / 3) !important;
+  margin: 0 24px !important;
 }
 
 [desktop] .i-amphtml-story-page-progress-bar {
@@ -183,15 +183,13 @@
 [desktop].i-amphtml-story-system-layer .i-amphtml-story-system-layer-buttons {
   display: flex !important;
   height: 40px !important;
-  width: calc(100vw/3) !important;
-  min-width: 200px;
-  align-items: center;
-  justify-content: flex-end;
-  margin-right: 32px;
+  align-items: center !important;
+  justify-content: flex-end !important;
+  margin-top: 0px !important;
 }
 
 [desktop] .i-amphtml-story-share-control {
-  display: none;
+  display: none !important;
 }
 
 
